--- a/src/Client1/FXML/chat2.fxml
+++ b/src/Client1/FXML/chat2.fxml
@@ -7,20 +7,30 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.ChatView">
-   <children>
-      <TextField fx:id="message" layoutX="21.0" layoutY="328.0" prefHeight="52.0" prefWidth="462.0" promptText="Type here..." />
-      <Button fx:id="sendButton" layoutX="517.0" layoutY="342.0" mnemonicParsing="false" onAction="#sendMessage" prefHeight="25.0" prefWidth="50.0" text="Send" />
-      <VBox prefHeight="309.0" prefWidth="600.0">
-         <children>
-            <Pane prefHeight="38.0" prefWidth="600.0" />
-            <ScrollPane fx:id="scrollPane" prefHeight="272.0" prefWidth="547.0">
-               <content>
-                  <TextArea fx:id="messages" prefHeight="245.0" prefWidth="600.0" />
-               </content>
-            </ScrollPane>
-         </children>
-      </VBox>
-      <Button layoutX="516.0" layoutY="368.0" mnemonicParsing="false" onAction="#getUsers" text="Users" />
-   </children>
+<Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+      minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+      prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client1.View.ChatViewController">
+    <children>
+        <TextField fx:id="message" layoutX="21.0" layoutY="328.0"
+                   prefHeight="52.0" prefWidth="462.0"
+                   promptText="Type here..."/>
+        <Button fx:id="sendButton" layoutX="517.0" layoutY="342.0"
+                mnemonicParsing="false" onAction="#sendMessage"
+                prefHeight="25.0" prefWidth="50.0" text="Send"/>
+        <VBox prefHeight="309.0" prefWidth="600.0">
+            <children>
+                <Pane prefHeight="38.0" prefWidth="600.0"/>
+                <ScrollPane fx:id="scrollPane" prefHeight="272.0"
+                            prefWidth="547.0">
+                    <content>
+                        <TextArea fx:id="messages" prefHeight="245.0"
+                                  prefWidth="600.0"/>
+                    </content>
+                </ScrollPane>
+            </children>
+        </VBox>
+        <Button layoutX="516.0" layoutY="368.0" mnemonicParsing="false"
+                onAction="#getUsers" text="Users"/>
+    </children>
 </Pane>
