--- a/Server/src/FXML/server.fxml
+++ b/Server/src/FXML/server.fxml
@@ -10,14 +10,14 @@
       style="-fx-background-color: #575756;"
       xmlns="http://javafx.com/javafx/11.0.1"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="View.ServerView">
+      fx:controller="view.ServerView">
     <children>
         <Button layoutX="135.0" layoutY="165.0" mnemonicParsing="false"
                 onAction="#startServer" prefHeight="35.0" prefWidth="118.0"
                 style="-fx-border-radius: 4; -fx-background-color: #3cbc58;"
                 text="Start server" textFill="WHITE"/>
         <Label fx:id="label" layoutX="185.0" layoutY="70.0" prefHeight="42.0"
-               prefWidth="213.0" text="Server is turned off" textFill="#f5f5f2">
+               prefWidth="213.0" text="server is turned off" textFill="#f5f5f2">
             <font>
                 <Font size="22.0"/>
             </font>
