--- a/Client/src/FXML/chat.fxml
+++ b/Client/src/FXML/chat.fxml
@@ -12,7 +12,7 @@
       minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
       prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="View.ChatViewController">
+      fx:controller="view.ChatViewController">
     <children>
         <TextField fx:id="sentMessageTextField" layoutX="21.0" layoutY="328.0"
                    prefHeight="52.0" prefWidth="462.0"
