--- a/Client/src/FXML/login.fxml
+++ b/Client/src/FXML/login.fxml
@@ -11,7 +11,7 @@
       style="-fx-background-color: #575756;"
       xmlns="http://javafx.com/javafx/15.0.1"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="View.LoginViewController">
+      fx:controller="view.LoginViewController">
     <children>
         <TextField fx:id="usernameTextField" layoutX="162.0" layoutY="103.0"
                    prefHeight="31.0" prefWidth="277.0"
